// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulSegmented > Snapshot tests > block level segmented control snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk delightful-segmented-block css-dev-only-do-not-override-yotw4n css-var-rg"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="Option 1"
        >
          Option 1
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="Option 2"
        >
          Option 2
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > Snapshot tests > basic segmented control snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk css-dev-only-do-not-override-yotw4n css-var-r4"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="Option 1"
        >
          Option 1
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="Option 2"
        >
          Option 2
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="Option 3"
        >
          Option 3
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > Snapshot tests > large size segmented control snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk delightful-segmented-lg css-dev-only-do-not-override-yotw4n css-var-ra"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="Option 1"
        >
          Option 1
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="Option 2"
        >
          Option 2
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > Snapshot tests > small size segmented control snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk delightful-segmented-sm css-dev-only-do-not-override-yotw4n css-var-rc"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="Option 1"
        >
          Option 1
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="Option 2"
        >
          Option 2
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > Snapshot tests > segmented control with icon snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk css-dev-only-do-not-override-yotw4n css-var-re"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
        >
          <span
            class="delightful-segmented-item-icon"
          >
            <span>
              🚀
            </span>
          </span>
          <span>
            Option 1
          </span>
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
        >
          <span
            class="delightful-segmented-item-icon"
          >
            <span>
              ⭐
            </span>
          </span>
          <span>
            Option 2
          </span>
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > Snapshot tests > segmented control with default value snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk css-dev-only-do-not-override-yotw4n css-var-r6"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="Option 1"
        >
          Option 1
        </div>
      </label>
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="Option 2"
        >
          Option 2
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="Option 3"
        >
          Option 3
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > Snapshot tests > disabled state segmented control snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented delightful-segmented-disabled acss-1yvjgsk css-dev-only-do-not-override-yotw4n css-var-r8"
    role="radiogroup"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected delightful-segmented-item-disabled"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          disabled=""
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="Option 1"
        >
          Option 1
        </div>
      </label>
      <label
        class="delightful-segmented-item delightful-segmented-item-disabled"
      >
        <input
          class="delightful-segmented-item-input"
          disabled=""
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="Option 2"
        >
          Option 2
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;
